# soulguard

./: CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
benchmark/: asi06_harness.py
docs/: THREAT_MODEL.md
examples/: quickstart.py
src/soulguard/: __init__.py  detection.py  governance.py  identity.py  memory.py
tests/: test_hybrid_identity.py  test_soulguard.py
