[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soulguard"
version = "0.1.0"
description = "An open trust layer for AI-agent memory and identity: tamper-evident memory, cryptographic agent identity, capability-scoped governance, and OWASP-ASI06 memory-poisoning detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Saluca Labs", email = "info@saluca.com" }]
keywords = ["ai-security", "agentic-ai", "memory-poisoning", "asi06", "agent-identity", "sovereign-ai", "trustworthy-ai"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # core is standard-library only

[project.optional-dependencies]
identity = ["cryptography>=42.0"]   # SoulKey Ed25519 signatures
pqc = ["cryptography>=42.0", "quantcrypt>=1.0.0"]   # Hybrid Ed25519 + ML-DSA-44 SoulKeys (FIPS 204)
dev = ["pytest>=7.0", "cryptography>=42.0", "quantcrypt>=1.0.0"]

[project.urls]
Homepage = "https://saluca.com"

[tool.setuptools.packages.find]
where = ["src"]
